[project]
name = "lbc"
version = "1.1.2"
description = "Unofficial client for Leboncoin API"
readme = "README.md"
authors = [
    { name = "etienne-hd", email = "hode.etienne@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "curl-cffi>=0.15.0",
]

keywords = ["lbc", "leboncoin", "wrapper", "api"]

[project.urls]
Homepage = "https://github.com/etienne-hd/lbc"
Repository = "https://github.com/etienne-hd/lbc"
Changelog = "https://github.com/etienne-hd/lbc/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
